--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap" rel="stylesheet">
-		<title>Polly's Sweet Cupcakes</title>
+		<title>Polly Cupcakes</title>
 	</head>
 	<body>
 		<div id="root"></div>
